##Text encoding: utf-8

2009-07-28  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/application.cc: do not loose spaces while loading. [#27131]
	* libs/gcp/text.cc: ditto.

2009-07-10  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/window.cc: do not use a freed string in a message box.

2009-06-25  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post release version bump (0.10.6).

2009-06-17  Jean Bréfort  <jean.brefort@normalesup.org>
	* *: make things compile with latest goffice.

2009-05-22  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: make it compile with latest goffice.
	* programs/table/gchemtable-curve.cc: fixed vector selections.
	* programs/table/gchemtable-data-allocator.cc: make it compile with latest
	goffice.
	* programs/table/gchemtable-data.cc: fix min max calculation for vectors.

2009-04-30  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: add check for go_data_serialize.
	* programs/calc/gchemcalc.cc: update to new GOData API if present.
	* programs/spectra/window.cc: ditto.
	* programs/table/gchemtable-curve.cc: ditto.
	* programs/table/gchemtable-data-allocator.cc: ditto.
	* programs/table/gchemtable-data.cc: ditto.

2009-04-12  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/preferences.cc: take new PANGO_WEIGHT_* values into account.
	* libs/gcp/theme.cc: ditto.

2009-04-10  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/spectrumdoc.cc: take more goffice changes into account.
	* libs/gcu/spectrumview.cc: ditto.
	* programs/calc/gchemcalc.cc: ditto.
	* programs/table/gchemtable-curve.cc: ditto.
	* programs/table/gchemtable-data.cc: ditto.

2009-04-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* goffice/gchemutils.cc: make our code compatible with new goffice API.
	[#26105]
	* libs/gcu/cmd-context.cc: ditto.
	* libs/gcu/gtkcomboperiodic.c: ditto.
	* libs/gcu/loader.cc: ditto.
	* libs/gcu/spectrumdoc.cc: ditto.
	* libs/gcu/spectrumview.cc: ditto.