@@ -1,4 +1,4 @@
 <?xml version="1.0"?>
 <chemistry>
-  <theme name="Wikipedia" bond-length="144" bond-angle="120" bond-dist="5,18" bond-width="1,2" arrow-length="200" arrow-head-a="6" arrow-head-b="8" arrow-head-c="4" arrow-dist="5" arrow-width="1" arrow-padding="16" hash-width="1,2" hash-dist="3,8" stereo-bond-width="4" zoom-factor="5" padding="0" stoichiometry-padding="1" object-padding="16" sign-padding="8" charge-sign-size="6" font-family="Arial" font-style="normal" font-weight="normal" font-variant="normal" font-stretch="normal" font-size="15360" text-font-family="Arial" text-font-style="normal" text-font-weight="normal" text-font-variant="normal" text-font-stretch="normal" text-font-size="15360"/>
+  <theme name="Wikipedia" bond-length="144" bond-angle="120" bond-dist="5.18" bond-width="1.2" arrow-length="200" arrow-head-a="6" arrow-head-b="8" arrow-head-c="4" arrow-dist="5" arrow-width="1" arrow-padding="16" hash-width="1.2" hash-dist="3.8" stereo-bond-width="4" zoom-factor="5" padding="0" stoichiometry-padding="1" object-padding="16" sign-padding="8" charge-sign-size="6" font-family="Arial" font-style="normal" font-weight="normal" font-variant="normal" font-stretch="normal" font-size="10240" text-font-family="Arial" text-font-style="normal" text-font-weight="normal" text-font-variant="normal" text-font-stretch="normal" text-font-size="10240"/>
 </chemistry>
